Share holder can see dashboard by logged in
